# countWords

./: .gitignore  CMakeLists.txt  counter.cpp  counterV2.cpp  counterV3.cpp  counterV4.cpp  counterold.cpp  generator.cpp  main.cpp  readme.md
tests/: CmakeLists.txt  benchmarks.cpp  test.cpp
